--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Desenvolvimento de Interfaces Web</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Olá</h1>
     <p>
         Eis a minha primeira página Web!
     </p>
-    <p>
+    <p>lab 1
         Na Unidade Curricular de <a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717">Desenvolvimento de Interfaces Web</a> abordaremos as seguintes tecnologias Web &#127760;:
     </p>
     <ul>
@@ -18,9 +19,15 @@
         <li>JavaScript</li>
         <li>React e Next.js</li>
     </ul>
+
+    <ul>
+        <li>
+            <a href="/lab 1: primeiro site/report.html">Lab 1: Report sobre o primeiro site</a>
+        </li>
+    </ul>
     <p>
         Iremos criar soluções criativas.
     </p>
-    <img href="images/diw.svg" alt="Desenvolvimento de Interfaces Web">
+    <img src="/lab 1: primeiro site/images/diw.svg - Google Chrome 25_09_2024 21_02_39.png" alt="Desenvolvimento de Interfaces Web">
 </body>
 </html>
