--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li>
             <a href="/lab 1: primeiro site/report.html">Lab 1: Report sobre o primeiro site</a>
         </li>
+        <li>
+            <a href="/lab 2:A minha cidade">Lab 2: A minha cidade</a>
+        </li>
     </ul>
     <p>
         Iremos criar soluções criativas.
