lab2 imagens atualizadas

--- a/lab 2:A minha cidade/index.html
+++ b/lab 2:A minha cidade/index.html
@@ -19,7 +19,7 @@
     <main>
         <h2>Home</h2>
         <p>A minha cidade é muito linda!!!</p>
-        <img src="images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab 2:A minha cidade/images/maxresdefault.jpg" alt="Shibuya" width="600">
     </main>
     <footer>
         <p>DIW 2024</p>
