correcao de erros

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>
         Eis a minha primeira página Web!
     </p>
-    <p>lab 1
+    <p>
         Na Unidade Curricular de <a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717">Desenvolvimento de Interfaces Web</a> abordaremos as seguintes tecnologias Web &#127760;:
     </p>
     <ul>
@@ -20,17 +20,19 @@
         <li>React e Next.js</li>
     </ul>
 
+    <h2>Os meus laboratórios:</h2>
+
     <ul>
         <li>
-            <a href="/lab 1: primeiro site/report.html">Lab 1: Report sobre o primeiro site</a>
+            <a href="/lab1_primeiro_site/report.html">Lab 1: Report sobre o primeiro site</a>
         </li>
         <li>
-            <a href="/lab 2:A minha cidade">Lab 2: A minha cidade</a>
+            <a href="/lab2_a_minha_cidade">Lab 2: A minha cidade - Shibuya</a>
         </li>
     </ul>
     <p>
         Iremos criar soluções criativas.
     </p>
-    <img src="/lab 1: primeiro site/images/diw.svg - Google Chrome 25_09_2024 21_02_39.png" alt="Desenvolvimento de Interfaces Web">
+    <img src="/lab1_primeiro_site/images/diw.svg - Google Chrome 25_09_2024 21_02_39.png" alt="Desenvolvimento de Interfaces Web">
 </body>
 </html>
