--- a/lab2_a_minha_cidade/local.html
+++ b/lab2_a_minha_cidade/local.html
@@ -6,14 +6,12 @@
 </head>
 <body>
     <header>
-        <h1>A minha Cidade</h1>
+        <h1>Shibuya</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="local.html">Localização</a></li>
-                <li><a href="multimedia.html">Multimédia</a></li>
-                <li><a href="info.html">Informações</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="local.html">Localização</a>
+            <a href="multimedia.html">Multimédia</a>
+            <a href="info.html">Informações</a>
         </nav>
     </header>
     <main>
