correcao de alguns issues

--- a/index.html
+++ b/index.html
@@ -24,15 +24,26 @@
 
     <ul>
         <li>
-            <a href="/lab1_primeiro_site/report.html">Lab 1: Report sobre o primeiro site</a>
+            <a href="/lab1_primeiro_site/report.html">Lab 1: Conhecer a Internet</a>
         </li>
         <li>
-            <a href="/lab2_a_minha_cidade">Lab 2: A minha cidade - Shibuya</a>
+            <a href="/lab2_a_minha_cidade/index.html">Lab 2: HTML "A minha Cidedade"</a>
         </li>
+        <li>
+            <a href="/lab3_formularios/index.html">Lab 3: A Formulários</a>
+        </li>
+
     </ul>
     <p>
         Iremos criar soluções criativas.
     </p>
-    <img src="/lab1_primeiro_site/images/diw.svg - Google Chrome 25_09_2024 21_02_39.png" alt="Desenvolvimento de Interfaces Web">
+    <img src="/lab1_primeiro_site/images/diw.svg .png" alt="Desenvolvimento de Interfaces Web">
+    <footer>
+        <p>
+            Letizia Nunes<br>
+            Universidade Lusófona Lisboa<br>
+            a22407143
+        </p>
+    </footer>
 </body>
 </html>
