--- a/lab1_primeiro_site/report.html
+++ b/lab1_primeiro_site/report.html
@@ -19,7 +19,7 @@
         <li>Outros ficheiros, como fontes ou ficheiros JSON para dados.</li>
 
         <p>
-        <img src="/lab1_primeiro_site/images/Captura de ecrã 2024-09-20 112638.png">
+        <img src="/lab1_primeiro_site/images/chrome.png">
         </p>
 
     </ul>
