--- a/lab1_primeiro_site/report2.html
+++ b/lab1_primeiro_site/report2.html
@@ -15,7 +15,7 @@
     <p>Também verifiquei o IP do meu telemóvel enquanto utilizava dados móveis. Curiosamente, a localização mostrada foi um pouco diferente, mas ainda na minha região. Aqui está o mapa da localização que encontrei:</p>
     
     <p>Aqui está a imagem do mapa com a localização aproximada:</p>
-    <img src="/lab1_primeiro_site/images/Captura de ecrã 2024-09-20 111447.png" alt="Mapa de localização do IP do computador">
+    <img src="/lab1_primeiro_site/images/geo_trace_route.png" alt="Mapa de localização do IP do computador">
     <p>Foi interessante ver a precisão do mapa, mesmo que não estivesse 100% exato. Vou guardar essas informações para futuras referências!</p>
 
 
