--- a/lab1_primeiro_site/report3.html
+++ b/lab1_primeiro_site/report3.html
@@ -12,7 +12,7 @@
     <a>Mostrou-me como diferentes servidores no mundo inteiro respondem ao meu domínio.</p>
 
     <p>Aqui está a imagem do dos servidores pelo mundo que respondem ao meu domínio:</p>
-    <img src="/lab1_primeiro_site/images/Captura de ecrã 2024-09-20 111102.png" alt="Mapa de localização do IP do computador">
+    <img src="/lab1_primeiro_site/images/DNS.png" alt="Mapa de localização do IP do computador">
 
 
     
