--- a/lab3_formularios/info.html
+++ b/lab3_formularios/info.html
@@ -13,7 +13,7 @@
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
         </nav>
-        <img src="/lab2_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab3_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
     <main>
         <h2>Informações</h2>
@@ -40,7 +40,11 @@
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
     <footer>
-        <p>DIW 2024</p>
+        <p>
+            Letizia Nunes<br>
+            Universidade Lusófona Lisboa<br>
+            a22407143
+        </p>
     </footer>
 </body>
 </html>
