--- a/lab3_formularios/index.html
+++ b/lab3_formularios/index.html
@@ -12,17 +12,24 @@
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
+            <a href="quizz.html">Quizz</a>
+            <a href="viagem.html">Viagem</a>
+
         </nav>
     </header>
     <main>
         <h2>Home</h2>
         <p>Shibuya não é uma cidade mas sim um "bairro" de Tóquio, mas esrte fator não tira a sua beleza!</p>
-        <img src="/lab2_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab3_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
 
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
     <footer>
-        <p>DIW 2024</p>
+        <p>
+            Letizia Nunes<br>
+            Universidade Lusófona Lisboa<br>
+            a22407143
+        </p>
     </footer>
 </body>
 </html>
