--- a/lab3_formularios/local.html
+++ b/lab3_formularios/local.html
@@ -13,19 +13,20 @@
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
         </nav>
-        <img src="/lab2_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab3_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
     <main>
         <h2>Localização</h2>
         <p>Shibuya é um dos 23 bairros de Tóquio, Japão, localizado no centro da cidade. É conhecido por sua vibrante vida urbana e pela famosa interseção de Shibuya, um dos locais mais movimentados do mundo.</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2320588050696!2d139.70163521525448!3d35.65858138019946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c17576ebdd5%3A0xa4c8de6b69c1c1b4!2sShibuya%20Crossing!5e0!3m2!1sen!2sjp!4v1695314401784!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    
-
-        <p>
-        <a href="/index.html">Voltar para o Website principal</a></p>
+        <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
     <footer>
-        <p>DIW 2024</p>
+        <p>
+            Letizia Nunes<br>
+            Universidade Lusófona Lisboa<br>
+            a22407143
+        </p>
     </footer>
 </body>
 </html>
