correcao de alguns issues

--- a/lab1/report.html
+++ b/lab1/report.html
@@ -19,7 +19,7 @@
         <li>Outros ficheiros, como fontes ou ficheiros JSON para dados.</li>
 
         <p>
-        <img src="/lab1_primeiro_site/images/chrome.png">
+        <img src="/lab1/images/chrome.png">
         </p>
 
     </ul>
@@ -45,10 +45,10 @@
     <h2>Mais descobertas</h2>
     <ul>
         <li>
-        <a href="/lab1_primeiro_site/report2.html" > Endereços IP</a> &#127760;</a>
+        <a href="/lab1/report2.html" > Endereços IP</a> &#127760;</a>
         </li>
         <li>
-            <a href="/lab1_primeiro_site/report3.html" > DNS Checker</a> &#127760;</a>
+            <a href="/lab1/report3.html" > DNS Checker</a> &#127760;</a>
         </li>
     </ul>
 </body>
