--- a/lab1/report3.html
+++ b/lab1/report3.html
@@ -12,7 +12,7 @@
     <a>Mostrou-me como diferentes servidores no mundo inteiro respondem ao meu domínio.</p>
 
     <p>Aqui está a imagem do dos servidores pelo mundo que respondem ao meu domínio:</p>
-    <img src="/lab1_primeiro_site/images/DNS.png" alt="Mapa de localização do IP do computador">
+    <img src="/lab1/images/DNS.png" alt="Mapa de localização do IP do computador">
 
 
     
@@ -20,10 +20,10 @@
     
     <ul>
         <li>
-            <a href="/lab1_primeiro_site/report2.html" > Endereços IP</a> &#127760;</a>
+            <a href="/lab1/report2.html" > Endereços IP</a> &#127760;</a>
         </li>
         <li>
-            <a href="/lab1_primeiro_site/report3.html" > DNS Checker</a>&#127760;
+            <a href="/lab1/report3.html" > DNS Checker</a>&#127760;
         </li>
     </ul>
 </body>
