--- a/lab2/local.html
+++ b/lab2/local.html
@@ -13,7 +13,7 @@
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
         </nav>
-        <img src="/lab2_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab2/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
     <main>
         <h2>Localização</h2>
