--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
 
     <ul>
         <li>
-            <a href="/lab1_primeiro_site/report.html">Lab 1: Conhecer a Internet</a>
+            <a href="/lab1/report.html">Lab 1: Conhecer a Internet</a>
         </li>
         <li>
-            <a href="/lab2_a_minha_cidade/index.html">Lab 2: HTML "A minha Cidedade"</a>
+            <a href="/lab2/index.html">Lab 2: HTML "A minha Cidedade"</a>
         </li>
         <li>
-            <a href="/lab3_formularios/index.html">Lab 3: A Formulários</a>
+            <a href="/lab3/index.html">Lab 3: A Formulários</a>
         </li>
 
     </ul>
     <p>
         Iremos criar soluções criativas.
     </p>
-    <img src="/lab1_primeiro_site/images/diw.svg .png" alt="Desenvolvimento de Interfaces Web">
+    <img src="/images/diw.svg.png" alt="Desenvolvimento de Interfaces Web">
     <footer>
         <p>
             Letizia Nunes<br>
