--- a/lab2/info.html
+++ b/lab2/info.html
@@ -13,7 +13,7 @@
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
         </nav>
-        <img src="/lab3_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab2/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
     <main>
         <h2>Informações</h2>
@@ -40,11 +40,7 @@
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
     <footer>
-        <p>
-            Letizia Nunes<br>
-            Universidade Lusófona Lisboa<br>
-            a22407143
-        </p>
+        <p>DIW 2024</p>
     </footer>
 </body>
 </html>
