--- a/lab3/multimedia.html
+++ b/lab3/multimedia.html
@@ -14,7 +14,7 @@
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
         </nav>
-        <img src="/lab3_a_minha_cidade/images/shibuya.jpg" alt="Shibuya" width="600">
+        <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
     <main>
         <h2>Multimédia</h2>
