--- a/lab1/report2.html
+++ b/lab1/report2.html
@@ -34,5 +34,13 @@
             <a href="/lab1/report3.html" > DNS Checker</a>&#127760;
         </li>
     </ul>
+    <p><a href="/index.html">Voltar para o Website principal</a></p>
+    <footer>
+        <p>
+            Letizia Nunes<br>
+            Universidade Lusófona Lisboa<br>
+            a22407143
+        </p>
+    </footer>
 </body>
 </html>
