--- a/lab2/info.html
+++ b/lab2/info.html
@@ -32,8 +32,8 @@
             </tr>
             <tr>
                 <td>É um dos 23 bairros dessa cidade.</td>
-                <td>Atraí turistas de todo o mundo.</td>
-                <td>Shibuya foi o cenário escolhido para um dos melhores animes do mundo "Jujutsu Kaisen"</td>
+                <td>Atrai turistas de todo o mundo</td>
+                <td>Shibuya foi o cenário escolhido para o anime "Jujutsu Kaisen"</td>
             </tr>
         </table>
 
