--- a/lab3/info.html
+++ b/lab3/info.html
@@ -12,6 +12,8 @@
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
+            <a href="quizz.html">Quizz</a>
+            <a href="viagem.html">Viagem</a>
         </nav>
         <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
@@ -32,8 +34,8 @@
             </tr>
             <tr>
                 <td>É um dos 23 bairros dessa cidade.</td>
-                <td>Atraí turistas de todo o mundo.</td>
-                <td>Shibuya foi o cenário escolhido para um dos melhores animes do mundo "Jujutsu Kaisen"</td>
+                <td>Atrai turistas de todo o mundo</td>
+                <td>Shibuya foi o cenário escolhido para o anime "Jujutsu Kaisen"</td>
             </tr>
         </table>
 
