--- a/lab3/local.html
+++ b/lab3/local.html
@@ -12,6 +12,8 @@
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informações</a>
+            <a href="quizz.html">Quizz</a>
+            <a href="viagem.html">Viagem</a>
         </nav>
         <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
@@ -21,6 +23,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2320588050696!2d139.70163521525448!3d35.65858138019946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c17576ebdd5%3A0xa4c8de6b69c1c1b4!2sShibuya%20Crossing!5e0!3m2!1sen!2sjp!4v1695314401784!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
+    <p><a href="/index.html">Voltar para o Website principal</a></p>
     <footer>
         <p>
             Letizia Nunes<br>
