--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Desenvolvimento de Interfaces Web</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Olá</h1>
@@ -32,6 +32,9 @@
         <li>
             <a href="/lab3/index.html">Lab 3: A Formulários</a>
         </li>
+        <li>
+            <a href="/lab4/index.html">Lab 4: A minha cidedade- CSS</a>
+        </li>
 
     </ul>
     <p>
@@ -39,11 +42,9 @@
     </p>
     <img src="/images/diw.svg.png" alt="Desenvolvimento de Interfaces Web">
     <footer>
-        <p>
-            Letizia Nunes<br>
-            Universidade Lusófona Lisboa<br>
-            a22407143
-        </p>
-    </footer>
+        <p> Letizia Nunes</p>
+        <p> Universidade Lusófona Lisboa</p>
+        <p> a22407143</p>
+</footer>
 </body>
 </html>
