--- a/lab2/index.html
+++ b/lab2/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h2>Home</h2>
-        <p>Shibuya não é uma cidade mas sim um "bairro" de Tóquio, mas esrte fator não tira a sua beleza!</p>
+        <p>Shibuya não é uma cidade mas sim um "bairro" de Tóquio, mas este fator não tira a sua beleza!</p>
         
 
         <p><a href="/index.html">Voltar para o Website principal</a></p>
