--- a/lab4/multimedia.html
+++ b/lab4/multimedia.html
@@ -8,7 +8,7 @@
         #photo-frame {
             width: 1700px;
             height: 1000px;
-            border: none; /* Remover borda usando CSS */
+            border: none; 
         }
     </style>
 </head>
