--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
 
     <ul>
         <li>
-            <a href="/lab1/report.html">Lab 1: Conhecer a Internet</a>
+            <a href="/lab1/report.html">Lab 1 : Conhecer a Internet</a>
         </li>
         <li>
-            <a href="/lab2/index.html">Lab 2: HTML "A minha Cidedade"</a>
+            <a href="/lab2/index.html">Lab 2 : HTML "A minha Cidedade"</a>
         </li>
         <li>
-            <a href="/lab3/index.html">Lab 3: A Formulários</a>
+            <a href="/lab3/index.html">Lab 3 : A Formulários</a>
         </li>
         <li>
-            <a href="/lab4/index.html">Lab 4: A minha cidedade- CSS</a>
+            <a href="/lab4/index.html">Lab 4 : A minha cidedade- CSS</a>
+        </li>
+        <li>
+            <a href="/lab5/index.html">Lab 5 : A minha cidade - CSS - Round 2</a>
         </li>
 
     </ul>
