criação de capitais

--- a/lab5/multimedia.html
+++ b/lab5/multimedia.html
@@ -22,7 +22,8 @@
             <a href="info.html">Informações</a>
             <a href="quizz.html">Quizz</a>
             <a href="viagem.html">Viagem</a>
-            <a href="pontosinteresse.html">Viagem</a>
+            <a href="pontosinteresse.html">Pontos de interesse</a>
+            <a href="capitais.html">Capitais (do Japão)</a>
         </nav>
         <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
