--- a/lab5/pontosinteresse.html
+++ b/lab5/pontosinteresse.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>A minha Cidade</h1>
+        <h1>Shibuya</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="local.html">Localização</a>
@@ -16,7 +16,8 @@
             <a href="info.html">Informações</a>
             <a href="quizz.html">Quizz</a>
             <a href="viagem.html">Viagem</a>
-            <a href="pontosinteresse.html">Pontos de Interesse</a>
+            <a href="pontosinteresse.html">Pontos de interesse</a>
+            <a href="capitais.html">Capitais (do Japão)</a>
         </nav>
         <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
@@ -25,7 +26,7 @@
         <h2>Pontos de Interesse</h2>
         <section>
             <h3>Top 5 Restaurantes</h3>
-            <ol>
+            <ol class="numeros-romanos">
                 <li>Ichiran Ramen</li>
                 <li>Genki Sushi</li>
                 <li>Narukiyo Izakaya</li>
@@ -36,7 +37,7 @@
 
         <section>
             <h3>Top 5 Monumentos</h3>
-            <ol>
+            <ol class="numeros-romanos">
                 <li>Cruzamento de Shibuya</li>
                 <li>Estátua de Hachiko</li>
                 <li>Shibuya 109</li>
@@ -62,7 +63,7 @@
 
         <section>
             <h3>Melhor Altura para visitar</h3>
-            <table>
+            <table id="tabela">
                 <tr>
                     <th>Mês</th>
                     <th>Clima</th>
@@ -78,7 +79,7 @@
             </table>
         </section>
     </main>
-
+    <p><a href="/index.html">Voltar para o Website principal</a></p>
     <footer>
         <p>Letizia Nunes</p>
         <p>Universidade Lusófona Lisboa</p>
