--- a/lab5/index.html
+++ b/lab5/index.html
@@ -16,6 +16,7 @@
             <a href="quizz.html">Quizz</a>
             <a href="viagem.html">Viagem</a>
             <a href="pontosinteresse.html">Pontos de interesse</a>
+            <a href="capitais.html">Capitais (do Japão)</a>
         </nav>
         <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
