--- a/lab5/viagem.html
+++ b/lab5/viagem.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Viagem a Shibuya</title>
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
         <h1>Shibuya</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -16,67 +16,70 @@
             <a href="info.html">Informações</a>
             <a href="quizz.html">Quizz</a>
             <a href="viagem.html">Viagem</a>
-            <a href="pontosinteresse.html">Viagem</a>
+            <a href="pontosinteresse.html">Pontos de interesse</a>
+            <a href="capitais.html">Capitais (do Japão)</a>
         </nav>
         <img src="/lab3/images/shibuya.jpg" alt="Shibuya" width="600">
     </header>
 
-<h1>Registro de Viagem a Shibuya</h1>
-<form method="get" action="https://postman-echo.com/get">
-    <fieldset>
-        <legend>Informações Pessoais</legend>
-        
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" placeholder="Insira seu nome" required><br><br>
+    <main>
+        <section>
+            <h2>Registro de Viagem a Shibuya</h2>
+            <form method="get" action="https://postman-echo.com/get">
+                <fieldset>
+                    <legend>Informações Pessoais</legend>
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" placeholder="Insira seu nome" required>
 
-        <label for="apelido">Apelido:</label>
-        <input type="text" id="apelido" name="apelido" placeholder="Insira seu apelido"><br><br>
+                    <label for="apelido">Apelido:</label>
+                    <input type="text" id="apelido" name="apelido" placeholder="Insira seu apelido">
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="exemplo@dominio.com" required><br><br>
-    </fieldset>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="exemplo@dominio.com" required>
+                </fieldset>
 
-    <fieldset>
-        <legend>Detalhes da Viagem</legend>
-        
-        <label for="dataPartida">Data de Partida:</label>
-        <input type="date" id="dataPartida" name="dataPartida" required><br><br>
+                <fieldset>
+                    <legend>Detalhes da Viagem</legend>
+                    <label for="dataPartida">Data de Partida:</label>
+                    <input type="date" id="dataPartida" name="dataPartida" required>
 
-        <label for="dataRegresso">Data de Regresso:</label>
-        <input type="date" id="dataRegresso" name="dataRegresso"><br><br>
+                    <label for="dataRegresso">Data de Regresso:</label>
+                    <input type="date" id="dataRegresso" name="dataRegresso">
 
-        <label for="numPassageiros">Número de Passageiros:</label>
-        <input type="number" id="numPassageiros" name="numPassageiros" min="1" max="100" required><br><br>
+                    <label for="numPassageiros">Número de Passageiros:</label>
+                    <input type="number" id="numPassageiros" name="numPassageiros" min="1" max="100" required>
 
-        <label for="transporte">Meio de Transporte Favorito:</label>
-        <select id="transporte" name="transporte">
-            <option value="carro">Carro</option>
-            <option value="comboio">Comboio</option>
-            <option value="aviao">Avião</option>
-            <option value="onibus">Autocarro</option>
-        </select><br><br>
+                    <label for="transporte">Meio de Transporte Favorito:</label>
+                    <select id="transporte" name="transporte">
+                        <option value="carro">Carro</option>
+                        <option value="comboio">Comboio</option>
+                        <option value="aviao">Avião</option>
+                        <option value="onibus">Autocarro</option>
+                    </select>
 
-        <label>Serviço Desejado:</label>
-        <input type="radio" id="basico" name="servico" value="basico" required>
-        <label for="basico">Básico</label>
-        <input type="radio" id="premium" name="servico" value="premium">
-        <label for="premium">Premium</label><br><br>
+                    <label>Serviço Desejado:</label>
+                    <input type="radio" id="basico" name="servico" value="basico" required>
+                    <label for="basico">Básico</label>
+                    <input type="radio" id="premium" name="servico" value="premium">
+                    <label for="premium">Premium</label>
 
-        <label for="pedidosEspeciais">Pedidos Especiais:</label>
-        <textarea id="pedidosEspeciais" name="pedidosEspeciais" rows="4" cols="50" placeholder="Digite aqui seus pedidos especiais..."></textarea><br><br>
+                    <label for="preferencias">Preferências Alimentares:</label>
+                    <textarea id="preferencias" name="preferencias" rows="3" placeholder="Digite suas preferências alimentares"></textarea>
 
-        <label for="valorPorPessoa">Qual o valor que espera gastar por pessoa e por dia na sua viagem:</label>
-        <input type="number" id="valorPorPessoa" name="valorPorPessoa" min="0" step="0.01" placeholder="€"><br><br>
-    </fieldset>
+                    <input type="reset" value="Limpar Formulário">
+                </fieldset>
 
-    <input type="submit" value="Enviar">
-</form>
-<p><a href="/index.html">Voltar para o Website principal</a></p>
-<footer>
-    <p> Letizia Nunes</p>
-    <p> Universidade Lusófona Lisboa</p>
-    <p> a22407143</p>
-</footer>
+                <input type="submit" value="Enviar Dados da Viagem">
+            </form>
 
+            <p><a href="/index.html">Voltar para o Website principal</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Letizia Nunes</p>
+        <p>Universidade Lusófona Lisboa</p>
+        <p>a22407143</p>
+    </footer>
 </body>
 </html>
