--- a/index.html
+++ b/index.html
@@ -1,53 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desenvolvimento de Interfaces Web</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Olá</h1>
-    <p>
-        Eis a minha primeira página Web!
-    </p>
-    <p>
-        Na Unidade Curricular de <a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717">Desenvolvimento de Interfaces Web</a> abordaremos as seguintes tecnologias Web &#127760;:
-    </p>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>React e Next.js</li>
-    </ul>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section>
+      <header>
+        <div class="cabeca">
+          <h1>Welcome to my first website</h1>
+        </div>
+      </header>
 
-    <h2>Os meus laboratórios:</h2>
-
-    <ul>
-        <li>
-            <a href="/lab1/report.html">Lab 1 : Conhecer a Internet</a>
-        </li>
-        <li>
-            <a href="/lab2/index.html">Lab 2 : HTML "A minha Cidedade"</a>
-        </li>
-        <li>
-            <a href="/lab3/index.html">Lab 3 : A Formulários</a>
-        </li>
-        <li>
-            <a href="/lab4/index.html">Lab 4 : A minha cidedade- CSS</a>
-        </li>
-        <li>
-            <a href="/lab5/index.html">Lab 5 : A minha cidade - CSS - Round 2</a>
-        </li>
-
-    </ul>
-    <p>
-        Iremos criar soluções criativas.
-    </p>
-    <img src="/images/diw.svg.png" alt="Desenvolvimento de Interfaces Web">
-    <footer>
-        <p> Letizia Nunes</p>
-        <p> Universidade Lusófona Lisboa</p>
-        <p> a22407143</p>
-</footer>
-</body>
+      <main></main>
+    </section>
+  </body>
 </html>
