--- a/index.html
+++ b/index.html
@@ -7,14 +7,32 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section>
-      <header>
-        <div class="cabeca">
-          <h1>Welcome to my first website</h1>
-        </div>
-      </header>
-
-      <main></main>
-    </section>
+    <header>
+      <div class="cabeca">
+        <h1>Welcome to my first website</h1>
+      </div>
+      <div class="pescoco">
+        <p>
+          This is a simple website that I created to learn how to develop web
+          interfaces. I hope you enjoy it!
+        </p>
+      </div>
+      <audio autoplay>
+        <source src="/audio/10 Minutes of Rain and Thunderstorm Sounds For Focus, Relaxing and Sleep ⛈️ Epidemic ASMR.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      
+    </header>
+    <section></section>
+    <main></main>
+    <nav>
+      <ul>
+        <a href="/lab1/report.html">Lab 1</a>
+        <a href="/lab2/index.html">Lab 2</a>
+        <a href="/lab3/index.html">Lab 3</a>
+        <a href="/lab4/index.html">Lab 4</a>
+        <a href="/lab5/index.html">Lab 5</a>
+      </ul>
+    </nav>
   </body>
 </html>
