--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="pescoco">
         <p>
           This is a simple website that I created to learn how to develop web
-          interfaces. I hope you enjoy it!
+          interfaces. I hope you enjoy it!!
         </p>
       </div>
       <audio autoplay>
