--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           interfaces. I hope you enjoy it!!
         </p>
       </div>
-      <audio autoplay>
+      <audio autoplay controls>
         <source src="/audio/10 Minutes of Rain and Thunderstorm Sounds For Focus, Relaxing and Sleep ⛈️ Epidemic ASMR.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
