mudancas simples lab 5

--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
           <li><a href="/lab3/index.html" class="lab-button">Lab 3</a></li>
           <li><a href="/lab4/index.html" class="lab-button">Lab 4</a></li>
           <li><a href="/lab5/index.html" class="lab-button">Lab 5</a></li>
+          <li><a href="/lab6/index.html" class="lab-button">Lab 6</a></li>
         </ul>
       </nav>
     </div>
   </main>
+  <footer>
+    <p>Letizia Nunes</p>
+    <p>Universidade Lusófona Lisboa</p>
+    <p>a22407143</p>
+  </footer>
 </body>
 </html>
