--- a/lab6/info.html
+++ b/lab6/info.html
@@ -9,17 +9,19 @@
 <body>
     <header>
         <h1>Shibuya</h1>
-        <nav class="main-nav">
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
-            <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
-            <a href="info.html"><i class="fas fa-info-circle"></i> Informações</a>
-            <a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a>
-            <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
-            <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
-            <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
-        </nav>
+        
     </header>
+    <nav class="main-nav">
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
+        <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
+        <a href="info.html"><i class="fas fa-info-circle"></i> Informações</a>
+        <a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a>
+        <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
+        <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
+        <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
+        <a href="video.html"><i class="fas fa-video"></i> Vídeo</a> 
+    </nav>
     <main class="infoP">
         <h2>Informações</h2>
         <p>Curiosidades e fatos sobre Shibuya:</p>
@@ -44,10 +46,14 @@
 
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
+    <aside>
+        <img src="/lab6/images/shibuya.jpg" alt="Imagem de Shibuya" style="width: 100%; border-radius: 10px;">
+        
+    </aside>
     <footer>
         <p> Letizia Nunes</p>
         <p> Universidade Lusófona Lisboa</p>
         <p> a22407143</p>
-</footer>
+    </footer>
 </body>
 </html>
