--- a/lab6/viagem.html
+++ b/lab6/viagem.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Viagem a Shibuya</title>
     <link rel="stylesheet" href="styles.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <header>
         <h1>Shibuya</h1>
-        <nav class="main-nav">
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
-            <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
-            <a href="info.html"><i class="fas fa-info-circle"></i> Informações</a>
-            <a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a>
-            <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
-            <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
-            <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
-        </nav>
+
     </header>
+    <nav class="main-nav">
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
+        <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
+        <a href="info.html"><i class="fas fa-info-circle"></i> Informações</a>
+        <a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a>
+        <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
+        <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
+        <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
+        <a href="video.html"><i class="fas fa-video"></i> Vídeo</a> 
+    </nav>
     <main class="viagemP">
         <section>
             <h2>Registo de Viagem a Shibuya</h2>
@@ -28,13 +33,15 @@
                 <fieldset>
                     <legend>Informações Pessoais</legend>
                     <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="nome" placeholder="Insira seu nome" required autofocus maxlength="50">
+                    <input type="text" id="nome" name="nome" placeholder="Insira seu nome" required autofocus
+                        maxlength="50">
 
                     <label for="apelido">Apelido:</label>
                     <input type="text" id="apelido" name="apelido" placeholder="Insira seu apelido" maxlength="50">
 
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="exemplo@dominio.com" required autocomplete="off" size="30">
+                    <input type="email" id="email" name="email" placeholder="exemplo@dominio.com" required
+                        autocomplete="off" size="30">
                 </fieldset>
 
                 <fieldset>
@@ -63,7 +70,8 @@
                     <label for="premium">Premium</label>
 
                     <label for="preferencias">Preferências Alimentares:</label>
-                    <textarea id="preferencias" name="preferencias" rows="3" placeholder="Digite suas preferências alimentares" maxlength="200"></textarea>
+                    <textarea id="preferencias" name="preferencias" rows="3"
+                        placeholder="Digite suas preferências alimentares" maxlength="200"></textarea>
 
                     <input type="reset" value="Limpar Formulário">
                 </fieldset>
@@ -76,10 +84,15 @@
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </div>
 
+    <aside>
+        <img src="/lab6/images/shibuya.jpg" alt="Imagem de Shibuya" style="width: 100%; border-radius: 10px;">
+        
+    </aside>
     <footer>
-        <p>Letizia Nunes</p>
-        <p>Universidade Lusófona Lisboa</p>
-        <p>a22407143</p>
+        <p> Letizia Nunes</p>
+        <p> Universidade Lusófona Lisboa</p>
+        <p> a22407143</p>
     </footer>
 </body>
+
 </html>
