--- a/lab6/local.html
+++ b/lab6/local.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Localização - Shibuya</title>
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <h1>Shibuya</h1>
-        <nav class="main-nav">
+    </header>
+    
+    <nav class="main-nav">
+        <div >
             <a href="index.html"><i class="fas fa-home"></i> Home</a>
             <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
             <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
@@ -18,8 +21,12 @@
             <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
             <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
             <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
-        </nav>
-    </header>
+            <a href="video.html"><i class="fas fa-video"></i> Vídeo</a> 
+        </div>
+    </div>
+</nav>
+
+
     <main class="localP">
         <h2>Localização</h2>
         <p>Shibuya é um dos 23 bairros de Tóquio, Japão, localizado no centro da cidade. É conhecido por sua vibrante vida urbana e pela famosa interseção de Shibuya, um dos locais mais movimentados do mundo.</p>
@@ -27,10 +34,14 @@
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </main>
     
+    <aside>
+        <img src="/lab6/images/shibuya.jpg" alt="Imagem de Shibuya" class="shibuya-image">
+    </aside>
+
     <footer>
-        <p> Letizia Nunes</p>
-        <p> Universidade Lusófona Lisboa</p>
-        <p> a22407143</p>
-</footer>
+        <p>Letizia Nunes</p>
+        <p>Universidade Lusófona Lisboa</p>
+        <p>a22407143</p>
+    </footer>
 </body>
 </html>
