--- a/lab6/quizz.html
+++ b/lab6/quizz.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizz sobre Shibuya</title>
     <link rel="stylesheet" href="styles.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <h1>Shibuya</h1>
-        <nav class="main-nav">
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
-            <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
-            <a href="info.html"><i class="fas fa-info-circle"></i> Informações</a>
-            <a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a>
-            <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
-            <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
-            <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
-        </nav>
+        
     </header>
+    <nav class="main-nav">
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a>
+        <a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a>
+        <a href="info.html"><i class="fas fa-info-circle"></i> Informações</a>
+        <a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a>
+        <a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a>
+        <a href="pontosinteresse.html"><i class="fas fa-star"></i> Pontos de interesse</a>
+        <a href="capitais.html"><i class="fas fa-globe"></i> Capitais (do Japão)</a>
+        <a href="video.html"><i class="fas fa-video"></i> Vídeo</a> 
+    </nav>
     <main >
         <section>
             <h2>Quizz sobre Shibuya</h2>
@@ -95,11 +98,14 @@
     <div class="quizzP">
         <p><a href="/index.html">Voltar para o Website principal</a></p>
     </div>
-    <p><a href="/index.html">Voltar para o Website principal</a></p>
+    <aside>
+        <img src="/lab6/images/shibuya.jpg" alt="Imagem de Shibuya" style="width: 100%; border-radius: 10px;">
+        
+    </aside>
     <footer>
-        <p>Letizia Nunes</p>
-        <p>Universidade Lusófona Lisboa</p>
-        <p>a22407143</p>
+        <p> Letizia Nunes</p>
+        <p> Universidade Lusófona Lisboa</p>
+        <p> a22407143</p>
     </footer>
 </body>
 </html>
