--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a href="/lab4/index.html" class="lab-button">Lab 4</a></li>
           <li><a href="/lab5/index.html" class="lab-button">Lab 5</a></li>
           <li><a href="/lab6/index.html" class="lab-button">Lab 6</a></li>
+          <li><a href="/defesa_1/index.html" class="lab-button">Lab 7
         </ul>
       </nav>
     </div>
