dedicatoria ao professor pedro

--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
         This is a simple website that I created to learn how to develop web
         interfaces. I hope you enjoy it!
       </p>
+      
+      <p> ( ﾉ ﾟｰﾟ)ﾉ</p>
+
     </div>
     <img src="/images/bocci.gif" alt="Round Image" class="round-image" />
+    <img src="/images/coolOff.png" alt="Round Image " class="round-image2" />
+
     <audio id="background-audio" autoplay>
       <source src="/audio/10 Minutes of Rain and Thunderstorm Sounds For Focus, Relaxing and Sleep ⛈️ Epidemic ASMR.mp3"
         type="audio/mpeg">
       Your browser does not support the audio element.
       <script>
-        document.getElementById('background-audio').volume = 0.1;
+        document.getElementById('background-audio').volume = 0.2;
       </script>
   </header>
   <main>
@@ -35,7 +40,7 @@
     <div class="peito">
       <p>
         Here you can find some of the labs that I have developed during the
-        course of Web Interface Development. 
+        course of Web Interface Development.
       </p>
     </div>
     <div id="labs">
@@ -47,6 +52,7 @@
           <li><a href="/lab4/index.html" class="lab-button">Lab 4</a></li>
           <li><a href="/lab5/index.html" class="lab-button">Lab 5</a></li>
           <li><a href="/lab6/index.html" class="lab-button">Lab 6</a></li>
+          <li><a href="/lab7/index.html" class="lab-button">Lab 7</a></li>
         </ul>
       </nav>
     </div>
@@ -57,4 +63,5 @@
     <p>a22407143</p>
   </footer>
 </body>
+
 </html>
