--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li><a href="/lab6/index.html" class="lab-button">Lab 6</a></li>
           <li><a href="/lab7/index.html" class="lab-button">Lab 7</a></li>
           <li><a href="/lab8/index.html" class="lab-button">Lab 8</a></li>
+          <li><a href="/lab9/index.html" class="lab-button">Lab 9</a></li>
         </ul>
       </nav>
     </div>
