--- a/lab10/index.html
+++ b/lab10/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Loja</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="main.js" defer></script>
     </head>
 
     <body>
@@ -42,7 +43,6 @@
             <p><a href="/index.html">Voltar para o Website principal</a></p>
         </footer>
 
-        <script type="module" src="main.js"></script>
-        <script type="module" src="produto.js"></script>
+        
     </body>
 </html>
