--- a/defesa_2/index.html
+++ b/defesa_2/index.html
@@ -44,6 +44,11 @@
                     <input type="text" id="buscaProduto" placeholder="Pesquise por produto">
                 </section>
 
+                <section>
+                    <button for="info">Menos info</button>
+                    <input type="button" id="info">
+                </section>
+
             </section>
 
             <article id="allProducts" class="produto-container">
@@ -60,6 +65,8 @@
                 
                 <p id="custoTotal"></p>
                 <section id="checkout">
+                    <button type="button" id="removerTudo">Remover todos os produtos</button>
+
                     <p id="total"></p>
         
                     <section>
