--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <li><a href="/lab8/index.html" class="lab-button">Lab 8</a></li>
           <li><a href="/lab9/index.html" class="lab-button">Lab 9</a></li>
           <li><a href="/lab10/index.html" class="lab-button">Lab 10</a></li>
+          <li><a href="/defesa_2/index.html" class="lab-button">Defesa</a></li>
         </ul>
       </nav>
     </div>
